--- a/norway2015_eng.html
+++ b/norway2015_eng.html
@@ -17,8 +17,8 @@
             <h3 align="center">Norway. 24 of July - 4 of August 2015.</h3><br>
 
             <p>
-                During the summer 2015 I manager to visit Norway where I joined the hiking trip from the
-                <a href="http://www.vezdehod-tour.com.ua/">Club of soul trips Vezdehod</a>. Out group consisted of
+                During the summer 2015 I managed to visit Norway where I joined the hiking group from the
+                <a href="http://www.vezdehod-tour.com.ua/">Club of soul trips Vezdehod</a>. Our group consisted of
                 8 people where were 7 ukrainians and me. Despite all political and economical crises and wars we
                 became really good friends and in the end of the hiking trip already did not know how we will be without
                 each other in the future. Normally my trip reports describe every day, but in this case I decided to
@@ -49,8 +49,8 @@
                 </tr>
             </table>
             First day, but in reality the evening on the first day. That day we started our trip from the level of 1000 m,
-            needed to go through the mountain of 1750 meters and come to the "jumper" of the two lakes. Yes, I think that
-            this is one of the most beautiful places where we have been, I have not seen it anywhere else. So, we got the
+            needed to go over the mountain of 1750 meters and come to the "jumper" of two lakes. Yes, I think that
+            this is one of the most beautiful places where we have been, I have not seen this anywhere else. So, we got the
             problems when we started to go down, when the rain started plus the actual route was enough extreme. This route
             could be extreme even in the dry weather, but we also had the backpacks around 15-25 kg, thus we were going
             down quite slowly and did not reach even the half way when it became dark and the rain became stronger. Ow yes,
@@ -66,7 +66,7 @@
             with small peaces of the product that we did not know that time. There was the order to take the piece for
             each of us and eat. That day was my first time when I ate ginger and most probably it saved me from the sickness.
             Thanks to our instructor Kolya! That day I had an idea to go back because if all other days had been like this,
-            it would have been fanny. But, for my surprise, nobody had this type of thoughts, thus we went forward and had
+            it would have been fanny (not that funny). But, for my surprise, nobody had this type of thoughts, thus we went forward and had
             a great time in Norway mountains!
 
             <h4><i>What was new in this hiking trip?</i></h4>
@@ -83,13 +83,13 @@
                 </tr>
             </table>
             <p>
-                In Norway there is a lot of water - beautiful lakes and stormy lakes. And of course that it happens,
-                that we need to go to another side of the river. In many places were jumping from one stone to another one
+                In Norway there is a lot of water - beautiful lakes and stormy rivers. And, of course, it happened,
+                that we needed to go to another side of the river. In many places we were jumping from one stone to another one
                 and in some places we had suspension bridges. That was completely new impression for me because I have never
                 crossed stormy river on the suspension bridge with the backpack. That was really cool!
                 <a href="https://youtu.be/8mdub1ZbHYk?t=5m35s">This is how it looks on the camera GoPro</a>. Yes,
-                and we also have seen where snow melts and create the river. Sounds that it is not really cool,
-                but the things which nature creates there cannot be described.
+                and we also have seen where snow melts and creates the river. Sounds that it is not really cool,
+                but the things which nature creates there cannot be described with words.
             </p>
 
             <h4><i>What was the temperature during your hiking trip?</i></h4>
@@ -98,7 +98,7 @@
                 Norway mountains in July. So, during daytime with small wind and sun temperature can reach maybe 13 degrees,
                 but not more. In general, in t-shirt only our instructor Kolya can hike. During the night the temperature
                 could easily go until zero, so my advice is - take normal warm sleeping bag and not summer one that I
-                decided to take. There were could of days when our tents were 200 meters away from the snow, and thanks God
+                decided to take. There were couple of days when our tents were 200 meters away from the snow, and, thanks God,
                 we did not need to sleep on the snow. But believe me, during the summer in July there is enough snow
                 in Norway mountains - it is not Carpathian or Crimea.
             </p>
@@ -109,7 +109,7 @@
                 Norway - mountain Galdhøpiggen (2469 m). That was radial trip, so we were going without backpacks and
                 took with us only water and some snacks. We started our way from 1300 meters where we had our camp.
                 You can count that we needed to make 1200 meters up and same amount down. Even without the backpacks
-                this is not that light. I was waiting the moment what I could stay on the highest point of Norway and
+                this is not that light. I was waiting the moment when I could stay on the highest point of Norway and
                 watch all the beauties of this amazing country. But unfortunately we were not that lucky that day and
                 already in the middle of the rise we were in the cloud. What does it mean? Fog, just fog and the fact
                 that you cannot recognize the person after 50 meters and after 100 you don't see him at all. So, what
@@ -117,7 +117,7 @@
                 that we reached that highest point and raised to the Galdhøpiggen because when I was in Oslo I heard
                 that there is too much snow there and it is better not to go there. And I can agree that there was
                 enough snow - last 200-300 meters we were hiking in the snow. Couple of pictures from these places
-                reminded me about the icemen, but of course it was not too hard in our case, but wet snow and coldness
+                remind me about the icemen movies, but, of course, it was not too hard in our case, but wet snow and coldness
                 did not allow us to forget about them. On the way back our group had quite a lot of fun going down
                 on our booties in the snow.
             </p>
@@ -126,18 +126,18 @@
             <p>
                 Maybe after my story about the beauties of Norway you would say: "Which hiking trip?! I would rather
                 lie on the beach near the sea!" But this is absolutely another type of relaxing. What is so
-                fascinating there? First of all, you ago away from civilization and I am talking about all these
+                fascinating there? First of all, you go away from civilization and I am talking about all these
                 phones, computers, TVs and other devices which are around us. In hiking trip you don't have it and it is
                 really great, it can allow you to understand how much more important is communication with the people and
-                nature. Second, in the hiking trip it is always not that easy, but you do together with the group,
-                helping each other, going through the difficulties together. It makes you stronger psychologically and
-                physically. Third, people in hiking trips are always great - it is kind and responsive people with whom
+                nature. Second, in the hiking trip it is always not that easy, but you go together with the group,
+                help each other, go through the difficulties together. It makes you stronger psychologically and
+                physically. Third, people in hiking trips are always great - they are kind and responsive people with whom
                 it is very easy to find general language. During several days you become very close and start to know
                 them maybe even better than your best friends because you spend with them a lot of time, go the same route,
                 prepare the food and are glad these little victories when the instructor says "We came, set the camp!".
-                In general especially in this hiking trip we had really great group, were discussing all the topics
+                In general, especially in this hiking trip, we had really great group, were discussing all the topics
                 which exist, solving different mathematical and logical puzzles, played different games, sang songs
-                and shared the impressions. I still remember this puzzle about the man in the forest with the broken nec:)
+                and shared the impressions. I still remember that puzzle about the man in the forest with the broken neck:)
             </p>
 
             <p><i>So, hiking is amazing, and hiking in Norway - just awesome! To all of you I advice to visit this great
