--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
 	</td>
     <td valign="top">
 		<ul style=" line-height:2;">
-	<li><b><i>NEW!</i></b> Летом 2015 года я сходил в поход по удивительной стране Норвегия. Отчет с фотографиями и видео смотреть 
+	<li><b><i>NEW!</i></b> В середине мая 2017 года я впервые поучаствовал в Гонке Героев, которая проходила в Сертолово, что совсем недалеко от Санкт-Петербурга.
+		<p align="center">
+		<table>
+			<tr>
+				<iframe width="300" height="169" src="https://www.youtube.com/embed/mB7GOqP2gDk" frameborder="0" allowfullscreen></iframe>
+			</tr>
+		</table>
+		</p></li>
+	<li>Летом 2015 года я сходил в поход по удивительной стране Норвегия. Отчет с фотографиями и видео смотреть
 	<a href="norway2015.html">здесь</a>.
 	<p align="center">
 	<table>
