--- a/tahkomtb2014.html
+++ b/tahkomtb2014.html
@@ -68,8 +68,9 @@
 	
 	<p align="center">
 	Тут Вы можете увидеть мое прохождение трассы в деталях: высота, скорость, время и т.д.<br>
-	<iframe style='background-color: transparent;' frameborder='0' marginwidth='0' marginheight='0' scrolling='no' width='450' height='300' src='http://www.sports-tracker.com/widgets/wdgt_workout.html?username=vladt89&workout_key=uff8730kj5nvj5et'></iframe>
-	</p>	
+        <iframe height='405' width='590' frameborder='0' allowtransparency='true' scrolling='no'
+                src='https://www.strava.com/activities/990442193/embed/e091649d6c4390fd0d11de2f1dd383e7c9be55ba'></iframe>
+    </p>
 	<p align="center">До встречи на Tahko MTB 2015!</p>
 	
 	<p>	
@@ -102,8 +103,8 @@
 	
 	<a name="video"></a>
 	<p align="center"><b>Видео со старта</b></p>
-	<p align="center">	  
-		<iframe width="560" height="315" src="//www.youtube.com/embed/dx2xQ-y0JuM" frameborder="0" allowfullscreen></iframe>
+	<p align="center">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dx2xQ-y0JuM?list=PLmHe8Q-WpPQzHGyaMm9-I5sT4PQDtxJu3" frameborder="0" allowfullscreen></iframe>
 	</p>
 	  
 	</td>
