--- a/tahkomtb2014_eng.html
+++ b/tahkomtb2014_eng.html
@@ -23,7 +23,8 @@
 	
 	<p align="center">
 	Here is my route tracking: height, speed, time, etc.<br>
-	<iframe style='background-color: transparent;' frameborder='0' marginwidth='0' marginheight='0' scrolling='no' width='450' height='300' src='http://www.sports-tracker.com/widgets/wdgt_workout.html?username=vladt89&workout_key=uff8730kj5nvj5et'></iframe>
+	<iframe height='405' width='590' frameborder='0' allowtransparency='true' scrolling='no'
+            src='https://www.strava.com/activities/990442193/embed/e091649d6c4390fd0d11de2f1dd383e7c9be55ba'></iframe>
 	</p>	
 	<p align="center">See you on Tahko MTB 2015!</p>
 	
@@ -57,8 +58,8 @@
 	
 	<a name="video"></a>
 	<p align="center"><b>Video from start</b></p>
-	<p align="center">	  
-		<iframe width="560" height="315" src="//www.youtube.com/embed/dx2xQ-y0JuM" frameborder="0" allowfullscreen></iframe>
+	<p align="center">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/dx2xQ-y0JuM?list=PLmHe8Q-WpPQzHGyaMm9-I5sT4PQDtxJu3" frameborder="0" allowfullscreen></iframe>
 	</p>
 		  
 	</td>
