--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</td>
     <td valign="top">
 		<ul style=" line-height:2;">
-	<li><b><i>NEW!</i></b> В середине мая 2017 года я впервые поучаствовал в Гонке Героев, которая проходила в Сертолово, что совсем недалеко от Санкт-Петербурга.
+	<li>В середине мая 2017 года я впервые поучаствовал в Гонке Героев, которая проходила в Сертолово, что совсем недалеко от Санкт-Петербурга.
 		<p align="center">
 		<table>
 			<tr>
