Finnish language introduction

--- a/ssi/menu_fin.html
+++ b/ssi/menu_fin.html
@@ -1,13 +1,13 @@
 <td valign="top" width="192">
 	<TABLE class="T2" cellpadding="0" cellspacing="0">
    <ul>
-        <tr>
-          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='index_eng.shtml' "><li><a href="index_eng.shtml">Main</a></li></td>
-        </tr>
-        <tr>
-          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='friends_eng.html' "><li><a href="friends_eng.html">Friends</a></li></td>
-        </tr>
-        <tr>
+        <!--<tr>-->
+          <!--<td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='index_eng.shtml' "><li><a href="index_eng.shtml">Main</a></li></td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+          <!--<td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='friends_eng.html' "><li><a href="friends_eng.html">Friends</a></li></td>-->
+        <!--</tr>-->
+        <!--<tr>-->
           <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';"><li><a href="#" name="link5" id="link1" onMouseOver="MM_showMenu(window.mm_menu_0803092855_0,59,0,null,'link5')" onMouseOut="MM_startTimeout();">Hobbies</a></li></td>
         </tr>
 		  <tr>
@@ -19,12 +19,12 @@
 	     <tr>
           <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='events_eng.html' "><li><a href="events_eng.html">Interesting events</a></li></td>
         </tr>
-        <tr>
-          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='music_eng.html' "><li><a href="music_eng.html">Music</a></li></td>
-        </tr>
-        <tr>
-          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='idea_eng.html' "><li><a href="idea_eng.html">Ideology</a></li></td>
-        </tr>
+        <!--<tr>-->
+          <!--<td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='music_eng.html' "><li><a href="music_eng.html">Music</a></li></td>-->
+        <!--</tr>-->
+        <!--<tr>-->
+          <!--<td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='idea_eng.html' "><li><a href="idea_eng.html">Ideology</a></li></td>-->
+        <!--</tr>-->
         <!--<tr>
           <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='funny_eng.html' "><li><a href="funny_eng.html">Humour</a></li></td>
         </tr>-->
@@ -34,7 +34,7 @@
     </ul>
 	</TABLE>
 			<div align="center">
-				<a href="index.html">In Russian</a>&nbsp;<a href="index_fin.shtml">In Finnish</a>
+				<a href="index.html">In Russian</a>
 			</div>			
 			<div class="cl5" style="margin-top:25;" align="center">
 				advise to visit:<br>
