Include biking in finnish

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </tr>
       </ul>
     </TABLE>	
-    		<div align="center"><a href="index_eng.shtml">In English</a></div>		
+    		<div align="center"><a href="index_eng.shtml">In English</a>&nbsp;<a href="index_fin.shtml">In Finnish</a></div>
 			<div class="cl5" style="margin-top:25;" align="center">советую посетить:<br>
 				<a href="http://www.securitylab.ru/">securitylab.ru</a><br>
            		<a href="http://www.hackzone.ru/">hackzone.ru</a><br><br>                
