--- a/ssi/menu_eng.html
+++ b/ssi/menu_eng.html
@@ -34,7 +34,7 @@
     </ul>
 	</TABLE>
 			<div align="center">
-				<a href="index.html">In Russian</a>&nbsp;<a href="index_fin.shtml">In Finnish</a>
+				<a href="../index.html">In Russian</a>&nbsp;<a href="../index_fin.shtml">In Finnish</a>
 			</div>			
 			<div class="cl5" style="margin-top:25;" align="center">
 				advise to visit:<br>
