--- a/ssi/menu_fin.html
+++ b/ssi/menu_fin.html
@@ -7,17 +7,17 @@
         <!--<tr>-->
           <!--<td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='friends_eng.html' "><li><a href="friends_eng.html">Friends</a></li></td>-->
         <!--</tr>-->
-        <!--<tr>-->
-          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';"><li><a href="#" name="link5" id="link1" onMouseOver="MM_showMenu(window.mm_menu_0803092855_0,59,0,null,'link5')" onMouseOut="MM_startTimeout();">Hobbies</a></li></td>
-        </tr>
-		  <tr>
-          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='technic_eng.html' "><li><a href="technic_eng.html">Computer and technics</a></li></td>
-        </tr>		
         <tr>
-          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" ><li><a href="#" name="link4" id="link3" onMouseOver="MM_showMenu(window.mm_menu_0803103406_0,74,13,null,'link4')" onMouseOut="MM_startTimeout();">Photos</a></li></td>
+          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';"><li><a href="#" name="link5" id="link1" onMouseOver="MM_showMenu(window.mm_menu_0803092855_0,59,0,null,'link5')" onMouseOut="MM_startTimeout();">Harrastukset</a></li></td>
+        </tr>
+		  <!--<tr>-->
+          <!--<td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='technic_eng.html' "><li><a href="technic_eng.html">Computer and technics</a></li></td>-->
+        <!--</tr>		-->
+        <tr>
+          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" ><li><a href="#" name="link4" id="link3" onMouseOver="MM_showMenu(window.mm_menu_0803103406_0,74,13,null,'link4')" onMouseOut="MM_startTimeout();">Kuvia</a></li></td>
         </tr>
 	     <tr>
-          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='events_eng.html' "><li><a href="events_eng.html">Interesting events</a></li></td>
+          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='events_eng.html' "><li><a href="events_eng.html">Kiinnostava tapahtumat</a></li></td>
         </tr>
         <!--<tr>-->
           <!--<td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='music_eng.html' "><li><a href="music_eng.html">Music</a></li></td>-->
@@ -28,23 +28,19 @@
         <!--<tr>
           <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='funny_eng.html' "><li><a href="funny_eng.html">Humour</a></li></td>
         </tr>-->
-        <tr>
-          <td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='contact_eng.html' "><li><a href="contact_eng.html">Contact information</a></li></td>
-        </tr>
+        <!--<tr>-->
+          <!--<td onMouseOver="this.style.color='white'; this.style.background='lightgrey';" onMouseOut="this.style.background='cornsilk'; this.style.color='black';" onClick="window.location.href ='contact_eng.html' "><li><a href="contact_eng.html">Contact information</a></li></td>-->
+        <!--</tr>-->
     </ul>
 	</TABLE>
 			<div align="center">
-				<a href="index.html">In Russian</a>
+				<a href="../index.html">Venäjäksi</a>&nbsp;<a href="../index_eng.shtml">Englanniksi</a>
 			</div>			
 			<div class="cl5" style="margin-top:25;" align="center">
-				advise to visit:<br>
+				neuvoa käydä:<br>
 				<!--<a href="http://stackoverflow.com/">stackoverflow.com</a><br>-->
-           	<a href="https://www.youtube.com/user/tennisist89/"><i>my youtube channel</i></a><br><br>                
+           	<a href="https://www.youtube.com/user/tennisist89/"><i>minun youtube kanava</i></a><br><br>
             <iframe width="184" scrolling="no" height="229" frameborder="0" 
                 src="http://www.shredderchess.com/online/playshredder/gdailytactics.php?mylang=en&mysize=18"></iframe>
-			</div>
-			<div align="center" style="font-size:13px; margin-top:35;" >
-				developer<br>
-				&copy; <a href="http://facebook.com/vladt89">Vladimir Tikhomirov</a>
 			</div>
 </td>
